--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -14,6 +14,7 @@
     <a href="./passes.html" class="sidebar-link text-gray-300 hover:bg-white/5 hover:text-white rounded-lg px-4 py-2.5">Winners Pass</a>
     <a href="./referrals.html" class="sidebar-link text-gray-300 hover:bg-white/5 hover:text-white rounded-lg px-4 py-2.5">Referrals</a>
     <a href="./account.html" class="sidebar-link text-gray-300 hover:bg-white/5 hover:text-white rounded-lg px-4 py-2.5">      My Account
+      <a href="https://t.me/+_sCoKUelaBMxN2E1" class="sidebar-link text-gray-300 hover:bg-white/5 hover:text-white rounded-lg px-4 py-2.5">      Support
     </a>
     
   </nav>
